products/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-products
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-products
  template:
    metadata:
      labels:
        app: api-products
    spec:
      containers:
        - name: api-products
          image: dimaspratama04/api-products:v1.0.0
          resources:
            limits:
              cpu: "256m"
              memory: "512Mi"
          ports:
            - containerPort: 8081
