products/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  namespace: backend
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: api.example.local
    - http:
        paths:
          - path: /v1/products
            pathType: Prefix
            backend:
              service:
                name: api-products
                port:
                  number: 8081
